# toyidx-sqlite

./: .gitignore  CMakeLists.txt  README.md  package.json  pnpm-lock.yaml  repro.js  tmp-test.ts  tsconfig.json
scripts/: build_wasm.sh  profiler.ts
src/: constraints.test.ts  index.test.ts  index.ts
src/cpp/: ast.hpp  bindings.cpp  executor.cpp  executor.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp
src/engine/: executor.ts
src/parser/: lexer.ts  parser.ts  types.ts
src/storage/: database.ts  table.ts  wal.ts
src/wasm/: sql_engine.d.ts  sql_engine.js  sql_engine.wasm
tests/: basic.test.ts  comprehensive_bench.test.ts  constraints.test.ts  ddl.test.ts  dml.test.ts  performance.test.ts  select.test.ts  transactions.test.ts  wasm_lexer_test.ts
